# Paimon-Companion-Tauri

./: .gitignore  README.md  ROADMAP.md  commit-msg.txt  index.html  package.json  pnpm-lock.yaml  runme.sh  tsconfig.json  vite.config.ts
.cargo/: config.toml
.cursor/agents/: closeout-review.md  old-project-archaeology.md  phase-blueprint-writer.md
.cursor/rules/: project_rule.mdc  user_rule.mdc
.private/manual-checklists/: README.md  p2-voice-fusion-validation.md
blueprints/: README.md
blueprints/phase0/: architecture.md  bootstrap.md  data-flow.md  module-design.md  phase-roadmap.md  product-requirements.md  supplement.md
blueprints/phase1/: foundation.md
blueprints/phase2-1/: phase2-1-blueprint.md  (+1 more)
cards/: main_ganyu-946b1d13_spec_v2.json
dev-reports/: 2026-03-27-joy-ui-migration.md  2026-03-27-profile-fix-and-l2d-default.md  phase0-bootstrap.md  phase0-closeout.md  phase0-supplement-revision.md  phase1-initial-execution.md
docs/: Paimon_Live_RAG_Research_Notes_2026-03-28.md  README.md
prompts/: example.md
public/: sample-knowledge.json
scripts/: ensure-local-asr-model.ps1  m2-1-gptsovits-experiment.js  m2-2-trim-audition.js  run_local_vision_offline_wsl.sample.sh  test-embedding.mjs  test-knowledge-e2e.mjs  test-title-embedding.mjs
src/: App.css  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: debug_capture.rs  http_proxy.rs  local_asr.rs  mcp.rs  mod.rs  secret.rs  window.rs
(+343 files in other folders)
