[package]
name = "paimon-companion-tauri"
version = "0.1.0"
description = "Tauri-first desktop host for PAIMON"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paimon_companion_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-keyring = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
windows = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }

